--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@nozbe/watermelondb": "^0.27.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -31,37 +31,37 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "clone": "^2.1.2",
     "dayjs": "^1.11.10",
-    "expo": "^51.0.31",
-    "expo-av": "~14.0.7",
-    "expo-camera": "~15.0.15",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image-manipulator": "~12.0.5",
-    "expo-image-picker": "~15.0.7",
-    "expo-media-library": "~16.0.4",
-    "expo-modules-autolinking": "1.11.3",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-screen-orientation": "~7.0.5",
-    "expo-sensors": "~13.0.9",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~52.0.0",
+    "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.18",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-media-library": "~17.0.6",
+    "expo-modules-autolinking": "~2.0.0",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-screen-orientation": "~8.0.4",
+    "expo-sensors": "~14.0.2",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
     "native-base": "^3.4.28",
     "query-string": "^9.1.0",
-    "react": "18.2.0",
-    "react-dom": "^19.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-image-crop-picker": "^0.41.2",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vision-camera": "^4.5.2",
@@ -75,7 +75,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/clone": "^2.1.4",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/sort-array": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
