--- a/eas.json
+++ b/eas.json
@@ -40,9 +40,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "YOUR_APPLE_ID_EMAIL",
-        "ascAppId": "YOUR_APP_STORE_CONNECT_APP_ID",
-        "appleTeamId": "YOUR_APPLE_TEAM_ID"
+        "appleId": "rodrigobanselmo@gmail.com",
+        "ascAppId": "6738933088",
+        "appleTeamId": "XBV58548B3"
       },
       "android": {
         "serviceAccountKeyPath": "./google-service-account.json",
